--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "embla-carousel-react": "^8.6.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.2.1",
     "lucide-react": "^0.542.0",
     "mongoose": "^8.18.0",
     "next": "^15.5.2",
