--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash.debounce": "^4.0.8",
     "lru-cache": "^11.2.1",
     "lucide-react": "^0.542.0",
     "mongoose": "^8.18.0",
@@ -44,6 +46,7 @@
     "react-hook-form": "^7.62.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5",
