--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongoose": "^8.18.0",
     "next": "^15.5.2",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "razorpay": "^2.9.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
